-- =====================================================
-- 유휴 주차자원 정책 시뮬레이션 - 전체 스키마 (넓은버전, 8개 테이블)
-- 2026-07-26 데이터분석 최종 패키지(CSV 5종) 기준 갱신본
-- Oracle Autonomous Database 용 DDL
--
-- 사용법: ADB 접속 후 Database Actions → SQL 화면에 "전체 붙여넣기 → Run Script(▶▶)"
-- 실행 순서 주의: 부모 테이블부터 만들어서 FK가 안 깨지게 위→아래 순서 그대로 실행됨.
--
-- 확정 사항(2026-07-26):
--   - 격자 = 국가지점번호 100m×100m (122,318개), 위험지수는 핵심격자 1,306개×24h.
--   - PARKING_IDLE 제외: 유휴율 29.1%를 apartments.open_count에 사전 반영 완료.
--   - 위험지수 = (0.35공급부족 + 0.25수요압력 + 0.15교통혼잡 + 0.25환경민감도)×100.
--   - enforcement/air_quality의 grid_id는 공간조인 실패 시 NULL 허용(실패 471건).
--   - created_by는 관리자 1명 확정이라 기본값 'admin' 상수.
-- 적재 주의:
--   - DISTRICTS는 CSV 없음 → 분당구 1행 수동 INSERT 후 나머지 적재.
--   - enforcement CSV의 day_type 컬럼(전부 '평일')은 적재 제외.
--   - enforcement CSV의 grid_id "48752.0" float 표기 → 정수 변환 필요.
-- =====================================================

-- 1) 지역 (분당구 등 분석 대상 도시)
CREATE TABLE districts (
  district_id   NUMBER GENERATED BY DEFAULT AS IDENTITY,
  name          VARCHAR2(100) NOT NULL,          -- 지역명 (예: 성남시 분당구)
  sido          VARCHAR2(50),                     -- 시도
  sigungu       VARCHAR2(50),                     -- 시군구
  center_lat    NUMBER(10,7),                     -- 지역 중심 위도
  center_lng    NUMBER(10,7),                     -- 지역 중심 경도
  vehicle_count NUMBER,                            -- 차량등록 통계(통제 데이터)
  is_base       CHAR(1) DEFAULT 'N',              -- Y=기준지역(분당구)
  CONSTRAINT pk_districts PRIMARY KEY (district_id)
);

-- 2) 격자 (분석 최소 단위, 히트맵 셀)
CREATE TABLE grids (
  grid_id            NUMBER GENERATED BY DEFAULT AS IDENTITY,
  district_id        NUMBER NOT NULL,             -- 소속 지역
  grid_code          VARCHAR2(50),                -- 국가지점번호 (예: 다사515191)
  min_lat            NUMBER(10,7),                -- 경계 bbox 남서 위도
  min_lng            NUMBER(10,7),                -- 경계 bbox 남서 경도
  max_lat            NUMBER(10,7),                -- 경계 bbox 북동 위도
  max_lng            NUMBER(10,7),                -- 경계 bbox 북동 경도
  center_lat         NUMBER(10,7),                -- 격자 중심 위도(히트맵 라벨)
  center_lng         NUMBER(10,7),                -- 격자 중심 경도
  area_km2           NUMBER(12,4),                -- 격자 면적 0.01㎢(100m×100m 확정)
  effective_area_km2 NUMBER(12,4),                -- 녹지 제외 실질면적=단속밀도 분모
  CONSTRAINT pk_grids PRIMARY KEY (grid_id),
  CONSTRAINT fk_grids_district FOREIGN KEY (district_id) REFERENCES districts(district_id)
);

-- 3) 아파트 (유휴 주차 공급원, K-apt)
CREATE TABLE apartments (
  apartment_id  NUMBER GENERATED BY DEFAULT AS IDENTITY,
  grid_id       NUMBER,                           -- 공간조인 매핑 격자(NULL 허용)
  kapt_code     VARCHAR2(50),                     -- K-apt 원천 단지코드
  name          VARCHAR2(150) NOT NULL,           -- 단지명
  address       VARCHAR2(300),                    -- 원주소(지오코딩 입력)
  lat           NUMBER(10,7),                     -- 지오코딩 결과 위도
  lng           NUMBER(10,7),                     -- 지오코딩 결과 경도
  total_parking NUMBER,                           -- 총 주차면수
  is_open       CHAR(1),                          -- 외부인 개방 Y/N (최종 데이터 결측 없음: N=193/Y=17)
  open_count    NUMBER,                            -- 개방 시 잠재 유휴면수 = 총면수×29.1% 사전 반영
  source        VARCHAR2(50) DEFAULT '성남시 공공데이터', -- 출처
  CONSTRAINT pk_apartments PRIMARY KEY (apartment_id),
  CONSTRAINT fk_apartments_grid FOREIGN KEY (grid_id) REFERENCES grids(grid_id)
);

-- 4) 불법주정차 단속 (수요 원천, 평일만 161,231건)
--    ※ CSV의 day_type 컬럼(전부 '평일')은 적재 제외
CREATE TABLE enforcement (
  enforcement_id NUMBER GENERATED BY DEFAULT AS IDENTITY,
  grid_id        NUMBER,                          -- 공간조인 격자(실패 471건은 NULL)
  place_text     VARCHAR2(500),                   -- 원본 단속 장소 텍스트(지오코딩 입력)
  lat            NUMBER(10,7),                    -- 지오코딩 결과 위도
  lng            NUMBER(10,7),                    -- 지오코딩 결과 경도
  enforced_at    DATE,                            -- 단속 일자(2025, 시각 없음)
  day_of_week    VARCHAR2(10),                    -- 요일 한글(적재 시 '목요일'→'목' 한 글자 통일 권장)
  geocode_status VARCHAR2(20),                    -- 성공/실패
  CONSTRAINT pk_enforcement PRIMARY KEY (enforcement_id),
  CONSTRAINT fk_enforcement_grid FOREIGN KEY (grid_id) REFERENCES grids(grid_id)
);

-- 5) 대기질 (환경 원천, 에어코리아 — 2025 연간 시간별, 측정소 4곳, 23,424건)
--    ※ pm10/pm25는 최종 데이터에서 제외(NO2·CO만 사용)
CREATE TABLE air_quality (
  air_id       NUMBER GENERATED BY DEFAULT AS IDENTITY,
  grid_id      NUMBER,                            -- 측정소 소속 격자(NULL 허용)
  station_name VARCHAR2(100),                     -- 측정소명
  lat          NUMBER(10,7),                      -- 측정소 위도
  lng          NUMBER(10,7),                      -- 측정소 경도
  measured_at  TIMESTAMP,                         -- 측정 시각
  month        NUMBER,                            -- 월(1~12)
  day_of_week  VARCHAR2(10),                      -- 요일 한글 한 글자(예: 목)
  hour         NUMBER,                            -- 시(0~23)
  no2          NUMBER(12,4),                      -- 이산화질소(NO2)
  co           NUMBER(12,4),                      -- 일산화탄소(CO)
  CONSTRAINT pk_air_quality PRIMARY KEY (air_id),
  CONSTRAINT fk_air_grid FOREIGN KEY (grid_id) REFERENCES grids(grid_id)
);

-- (구 6번 PARKING_IDLE 제외 — 2026-07-26 데이터분석 결정)
-- 유휴율 29.1%를 apartments.open_count에 사전 반영해 위험지수 산출 완료.
-- 추후 시간대별 정밀화가 필요해지면 부활 후보.

-- 6) 위험지수 (핵심격자 1,306개 × 0~23시 = 31,344행)
CREATE TABLE risk_index (
  risk_id         NUMBER GENERATED BY DEFAULT AS IDENTITY,
  grid_id         NUMBER NOT NULL,                -- 소속 격자
  hour_of_day     NUMBER NOT NULL,                -- 0~23시
  demand_pressure NUMBER(12,4),                   -- 수요 압력 (가중치 0.25)
  supply_shortage NUMBER(12,4),                   -- 공급 부족 (가중치 0.35)
  traffic_congest NUMBER(12,4),                   -- 교통 혼잡 (가중치 0.15)
  env_sensitivity NUMBER(12,4),                   -- 환경 민감도 (가중치 0.25, NO2·CO 연동)
  risk_score      NUMBER(12,4),                   -- (0.35공급+0.25수요+0.15혼잡+0.25환경)×100, baseline 37.81
  batch_date      DATE,                            -- 분석 배치 적재일
  CONSTRAINT pk_risk_index PRIMARY KEY (risk_id),
  CONSTRAINT fk_risk_grid FOREIGN KEY (grid_id) REFERENCES grids(grid_id),
  CONSTRAINT uq_risk UNIQUE (grid_id, hour_of_day)
);

-- 7) 시나리오 (조건/레시피만 보관 — CRUD 풀세트)
CREATE TABLE scenarios (
  scenario_id      NUMBER GENERATED BY DEFAULT AS IDENTITY,
  name             VARCHAR2(200) NOT NULL,         -- 예: 분당구 평일 주간 10%
  memo             VARCHAR2(1000),                 -- 선택
  district_id      NUMBER NOT NULL,                -- 분석 지역
  open_to_public   CHAR(1) DEFAULT 'Y',            -- 외부인 개방 아파트 포함 Y/N (프론트 openToPublic)
  residents_only   CHAR(1) DEFAULT 'N',            -- 입주민 전용 포함 Y/N (프론트 residentsOnly, 둘 다 Y 가능)
  participation    NUMBER,                         -- 참여율 0~100 (프론트 participationRate)
  operation_start  VARCHAR2(5),                    -- 운영 시작 'HH:mm' (프론트 openFrom, 예: 08:00)
  operation_end    VARCHAR2(5),                    -- 운영 종료 'HH:mm' (프론트 openTo, 예: 19:00)
  commercial_radius_m NUMBER DEFAULT 500,          -- 상업시설 반경 m (프론트 commercialRadiusM)
  parking_fee      NUMBER,                         -- 부과 요금. 프론트 미전송(NULL 허용), 시드/확장용
  created_by       VARCHAR2(50) DEFAULT 'admin',   -- 관리자 1명 상수(소유자)
  created_at       TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  updated_at       TIMESTAMP,                      -- 조건 수정 시에만 갱신
  CONSTRAINT pk_scenarios PRIMARY KEY (scenario_id),
  CONSTRAINT fk_scenarios_district FOREIGN KEY (district_id) REFERENCES districts(district_id)
);

-- 8) 시나리오 결과 (갱신마다 새 줄 INSERT — 덮어쓰기 X)
--    같은 scenario_id + 다른 run_date = "같은 조건, 다른 결과"
CREATE TABLE scenario_results (
  result_id        NUMBER GENERATED BY DEFAULT AS IDENTITY,
  scenario_id      NUMBER NOT NULL,                -- 소속 시나리오
  run_date         DATE NOT NULL,                  -- 이 결과가 어느 갱신분인지 ★
  added_supply     NUMBER,                         -- 결과: 추가 확보 주차면
  risk_before      NUMBER(12,4),                   -- 결과: 적용 전 위험지수
  risk_after       NUMBER(12,4),                   -- 결과: 적용 후 위험지수
  carbon_reduction NUMBER(12,4),                   -- 결과: 탄소 저감량
  created_at       TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT pk_scenario_results PRIMARY KEY (result_id),
  CONSTRAINT fk_results_scenario FOREIGN KEY (scenario_id) REFERENCES scenarios(scenario_id),
  CONSTRAINT uq_results UNIQUE (scenario_id, run_date)
);
